[package]
name = "motion-planning"
version = "0.1.0-alpha.0"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
edition = "2018"
repository = "https://github.com/rye/motion-planning"
readme = "README.md"
keywords = ["quintic", "septic", "heptic", "hermite", "spline", "motion", "planning"]
categories = ["science::robotics"]
