[package]
name = "motion-planning"
description = "Motion planning primitives."
version = "0.1.0-alpha.1"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/rye/motion-planning"
readme = "README.md"
keywords = ["quintic", "hermite", "spline", "motion", "planning"]
categories = ["science::robotics"]

[badges]
maintenance = { status = "experimental" }

[workspace]
members = [
	"cli"
]
